# Infinity-Lab

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/Core/: core.h  utility.h
include/DataStructures/: Array.h  algorithm.h  binary_tree.h  simd.h  string.h
include/Functions/: polynomial.h
include/Io/: io.h
include/LinearAlgebra/: matrix.h
include/Memory/: memory.h  xmemory.h
include/Number/: Int.h  complex.h  integer.h  rational.h
include/Time/: performance.h  time.h
src/: int.cpp  integer.cpp  io.cpp  simd.cpp  temp.cpp  xmemory.cpp
tests/: CMakeLists.txt  test.cpp
